# XprtCalc

./: .gitignore  CMakeLists.txt  README.md  cli.cpp  index.html  test.cpp
docs/: compiling.md
docs/help/: help.css  help.js  helpPageGenerator.cpp  index.html
src/: _header.hpp  compute.cpp  help.cpp  parse.cpp  program.cpp  tree.cpp  unit.cpp  value.cpp
wasm/: CMakeLists.txt  arb.js  driver.js  style.css  wasm.cpp
