cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

project(xprtcalc)
if(DEBUG)
    message("building with debug flags")
    set(CMAKE_BUILD_TYPE Debug)
endif()
find_package(mp++)
if(mp++_FOUND)
    if(NOARB)
        message("mp++ found, but disabled. Run cmake build -UNOARB to reenable it.")
    else()
        message("Compiling with arb, use cmake build -NOARB=1 to disable it.")
        add_definitions(-DUSE_ARB=1)
        set(USE_ARB 1)
    endif()
else()
    message("Compiling without arb, mp++ not found")
endif()

file(GLOB_RECURSE SRC_FILES src/*.cpp)

add_library(xprt STATIC ${SRC_FILES})
target_precompile_headers(xprt PUBLIC "src/_header.hpp")
if(${USE_ARB})
    target_link_libraries(xprt PUBLIC mp++::mp++)
endif()


add_executable(xprtcalc ../cli.cpp)
target_link_libraries(xprtcalc PUBLIC xprt)
target_precompile_headers(xprtcalc REUSE_FROM xprt)

add_executable(xprttest ../test.cpp)
target_link_libraries(xprttest PUBLIC xprt)
target_precompile_headers(xprttest REUSE_FROM xprt)
add_test(tests xprttest)

add_executable(createhelphtml ../docs/help/helpPageGenerator.cpp)
target_link_libraries(createhelphtml PUBLIC xprt)
target_precompile_headers(createhelphtml REUSE_FROM xprt)